Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjInteger.quorum
class main
    action Main
        Text txt
        txt = cast(Text, 5)
    end
end